# sasabot

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
docs/: ARCHITECTURE.md
scripts/: format.sh  lint.sh
src/: __init__.py  main.py
src/api/: __init__.py  health.py
src/api/payment/: __init__.py
src/api/payment/daraja/: __init__.py  callback.py
src/api/reports/: __init__.py  receipts.py
src/api/whatsapp/: __init__.py  webhooks.py
src/common/dependencies/: __init__.py  database.py
src/common/interfaces/: __init__.py  token_provider.py
src/common/system/: __init__.py  app.py
src/configuration/: __init__.py  logger.py  settings.py
src/data/dtos/: __init__.py
src/data/entities/: __init__.py  base.py  booking.py  conversation_session.py  message.py
src/data/enums/: __init__.py  booking.py  conversation.py  errors.py  intent.py  message.py  payment.py  requests.py
src/data/migrations/: env.py
src/data/repositories/: __init__.py  booking.py  conversation_session.py  message.py
src/exceptions/: __init__.py  base.py  handlers.py  system.py  tokens.py
src/exceptions/handlers/: __init__.py  http.py  system.py
src/middleware/: __init__.py  requests.py
src/services/business/: __init__.py  context.py  pricing.py  promotion.py
src/services/conversation/: __init__.py  service.py  state_machine.py
src/services/llm/: __init__.py  client.py  intent_service.py
src/services/reports/: __init__.py  receipt_generator.py
src/utilities/: __init__.py  booking.py  datetime.py  phone_number.py  prompt_formatting.py
(+61 files in other folders)
