[project]
name = "sasabot"
version = "0.1.0"
description = "WhatsApp chatbot for beauty salon bookings with AI-powered conversations, M-PESA payment integration, and automated receipt generation"
packages = [
    { include = "src", from = "." }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "anthropic>=0.72.0",
    "asgi-correlation-id>=4.3.4",
    "cryptography>=46.0.3",
    "fastapi>=0.120.4",
    "pip>=25.2",
    "phonenumbers>=9.0.17",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.6",
    "psycopg[binary]>=3.2.12",
    "redis>=5.0.0",
    "reportlab>=4.4.4",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.38.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.14.3",
    "email-validator>=2.0.0",
    "cryptography>=44.0.0",
    "sqlmodel>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.14.3"
]
docs = [
    "email-validator>=2.0.0"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
